separate packages list

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,30 +25,42 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata for Docker
-        id: meta
+      - name: Extract frontend metadata for Docker
+        id: meta-frontend
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend
           tags: |
-            type=sha,format=long
-            type=match,pattern=main
-            type=raw,value=latest,enable={{is_default_branch}}
+            type=semver,pattern={{version}}
+            type=sha
           flavor: |
-            latest=auto
+            latest=true
 
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
+      - name: Extract backend metadata for Docker
+        id: meta-backend
+        uses: docker/metadata-action@v5
         with:
-          context: ./rsa-checker-backend
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend
+          tags: |
+            type=semver,pattern={{version}}
+            type=sha
+          flavor: |
+            latest=true
+
 
       - name: Build and push frontend
         uses: docker/build-push-action@v5
         with:
           context: ./rsa-checker-frontend
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-frontend.outputs.tags }}
+          labels: ${{ steps.meta-frontend.outputs.labels }}
+
+      - name: Build and push backend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./rsa-checker-backend
+          push: true
+          tags: ${{ steps.meta-backend.outputs.tags }}
+          labels: ${{ steps.meta-backend.outputs.labels }}
+
